# static-file-ip-authorizer

./: .dockerignore  Cargo.toml  Containerfile  README.md
.github/workflows/: container.yml
src/: app.rs  cli.rs  main.rs  tests.rs  types.rs
